manifests/infra/instances/http-proxy.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: namespace-delegation-root
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: testbed.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  # delegate the subpath, `/product` to the HTTPProxy object in the product namespace with the name `product`
  - name: product
    namespace: product
    conditions:
    - prefix: /product
  - name: payment-info
    namespace: payment-info
    conditions:
    - prefix: /paymentinfo
  - name: user
    namespace: user
    conditions:
    - prefix: /user
  - name: delivery-status
    namespace: delivery-status
    conditions:
    - prefix: /deliverystatus
  - name: comment
    namespace: comment
    conditions:
    - prefix: /comment
  - name: order
    namespace: order
    conditions:
    - prefix: /order
  - name: rate
    namespace: rate
    conditions:
    - prefix: /rate
  - name: cart
    namespace: cart
    conditions:
    - prefix: /cart
  - name: point
    namespace: point
    conditions:
    - prefix: /point
  - name: search
    namespace: search
    conditions:
    - prefix: /search
  - name: admin
    namespace: admin
    conditions:
    - prefix: /admin
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
    - services:
        - name: default-http-backend
          port: 8080
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argocd-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: argocd.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: argocd
    namespace: argocd
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: tekton-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: tekton.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: tekton
    namespace: tekton-pipelines
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: harbor-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: harbor.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: harbor
    namespace: infra
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: notary-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: notary.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: notary
    namespace: infra
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: dashboard-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: dashboard.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: dashboard
    namespace: kubernetes-dashboard
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rook-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: rook.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: rook
    namespace: rook-ceph
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: prometheus-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: prometheus.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: prometheus
    namespace: monitoring
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: grafana-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: grafana.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: grafana
    namespace: monitoring
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: alertmanager-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: alertmanager.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: alertmanager
    namespace: monitoring
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: weave-scope-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: weave-scope.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: weave-scope
    namespace: weave
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: yugabyte-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: yugabyte.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: yugabyte
    namespace: rook-yugabytedb-system
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: minio-httpproxy
  namespace: infra
  labels:
    service: infra
    role: proxy
spec:
  virtualhost:
    fqdn: minio.104.198.118.140.nip.io
    tls:
      secretName: testbed-cert
  includes:
  - name: minio
    namespace: infra
    conditions:
    - prefix: /
  routes:
    - conditions:
      - prefix: /.well-known/acme-challenge
      services:
        - name: infra-nginx-ingress-controller
          port: 80
      permitInsecure: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-http-backend
  labels:
    app: default-http-backend
  namespace: infra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: default-http-backend
        image: gcr.io/google_containers/defaultbackend:1.4
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
---
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: infra
  labels:
    app: default-http-backend
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: default-http-backend
